<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/margin"
    android:orientation="vertical"
    tools:context=".LineSensorActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStart"
            android:text="@string/start_button"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStop"
            android:text="@string/stop_button"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btOffset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOffset"
            android:text="@string/offset_button"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btClearOffset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClearOffset"
            android:text="@string/offsetclear_button"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rd_pow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pow_name"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rd_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/x_name"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rd_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_name"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rd_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_name"
                android:textColor="@color/text_color" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plot_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>